--- a/Lab PROJECT - Quiz Game.vcxproj
+++ b/Lab PROJECT - Quiz Game.vcxproj
@@ -144,12 +144,14 @@
     <ClCompile Include="Question.cpp" />
     <ClCompile Include="Quiz.cpp" />
     <ClCompile Include="SupportFunction.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Answer.h" />
     <ClInclude Include="Question.h" />
     <ClInclude Include="Quiz.h" />
     <ClInclude Include="SupportFunction.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
